fixed work btn and caption spacing issue

--- a/html/style.css
+++ b/html/style.css
@@ -599,7 +599,7 @@ a svg {
     .work-main {
         width: 85%;
         width: 85vw;
-        padding: 1em 2.5rem;
+        padding: 1em 2.5rem 5rem 2.5rem;
         grid-template-columns: calc(50% - 1.5rem) calc(50% - 1.5rem);
         grid-gap: 1.5rem 3rem;
     }
@@ -723,7 +723,11 @@ header.Personal + section article figure:nth-child(1) {
 .work__figure {
     justify-self: center;
     position: relative;
+    width: -moz-fit-content;
     width: fit-content;
+    display: grid;
+    grid-template-rows: max-content 1fr;
+    grid-gap: 0.5rem;
 }
 
 .expandBtn, #close {
@@ -743,9 +747,9 @@ header.Personal + section article figure:nth-child(1) {
     border: none;
 }
 
-.expandBtn-caption {
-    bottom: 3.5em;
-}
+/*.expandBtn-caption {*/
+/*    bottom: 3.5em;*/
+/*}*/
 
 .gridDense .expandBtn {
     position: absolute;
@@ -775,6 +779,7 @@ header.Personal + section article figure:nth-child(1) {
     grid-gap: 1em;
     margin: 0 auto 2em auto;
     max-height: initial;
+    width: 100%;
 }
 
 .center {
@@ -787,9 +792,9 @@ header.Personal + section article figure:nth-child(1) {
     grid-row: span 2;
 }
 
-.wide {
-    width: 100%;
-}
+/*.wide {*/
+/*    width: 100%;*/
+/*}*/
 
 @media (min-width:950px) {
     .medium {
@@ -803,7 +808,7 @@ header.Personal + section article figure:nth-child(1) {
     }
     .wide {
         grid-column: span 2;
-        width: 80vw;
+        /*width: 80vw;*/
     }
     .Personal .wide {
         grid-row: span 2;
@@ -913,7 +918,7 @@ audio {
         grid-column: -1/1;
     }
     .work-h2 {
-        padding: 0.5em 0;
+        padding: 0.5em 0 0 0;
     }
     .work-h2 + p {
         padding: 0 0;
@@ -1082,7 +1087,7 @@ audio {
     .about {
         display: grid;
         grid-template-columns: repeat(2, minmax(30ch, 40ch));
-        width: moz-fit-content;
+        width: -moz-fit-content;
         width: fit-content;
     }
     .about__column--one {
@@ -1113,6 +1118,7 @@ audio {
 @media(min-width:950px) {
     .about {
         grid-template-columns: repeat(3, minmax(30ch, 40ch));
+        -webkit-clip-path: url(#mask);
         clip-path: url(#mask);
     }
 
